refactor: Rename project and update metadata
Renames the project from "past-forward" to "FloorPlanMap" and updates associated metadata files to reflect the new name. This includes `package.json`, `package-lock.json`, `README.md`, and `metadata.json`.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Past Forward</title>
+    <title>FloorPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,8 @@
     "clsx": "https://esm.sh/clsx@^2.1.1",
     "vite": "https://aistudiocdn.com/vite@^7.1.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "jszip": "https://aistudiocdn.com/jszip@^3.10.1"
+    "jszip": "https://aistudiocdn.com/jszip@^3.10.1",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
